--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     ]
   },
   "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "webpack": "^3.11.0"
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,7 +24,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/preset-stage-0": "^7.8.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^4.7.16",
     "babel-preset-airbnb": "^2.5.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -31,5 +34,17 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "sinon": "^6.3.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
